Fix iframe overflow

--- a/frontend/src/assets/sass/app.scss
+++ b/frontend/src/assets/sass/app.scss
@@ -231,6 +231,9 @@ a.under {
   }
   height: 100%;
 }
+iframe {
+  max-width: 100%;
+}
 .blink {
   animation: blinker 1.2s linear infinite;
   font-weight: 300;
